--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="bg-black text-gray-200">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
